NM and noprefixroute
Hi, I use NetworkManager on my router for network configuration. The problem is that NM automatically sets the noprefixroute parameter, which then gives me problems with dynamic routing (OSPFv2). I've read man NM and nmcli but haven't found what I'm looking for.
vlan103@enp1s0: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc htb state UP group default qlen 1000
inet 10.107.80.219/29 brd 10.107.80.223 scope global noprefixroute vlan103
valid_lft forever preferred_lft forever
Please do you know how I can entertain noprefixroute ?
Thanks